--- a/index.html
+++ b/index.html
@@ -89,60 +89,60 @@
                          class="world-map-img"
                          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; object-fit: cover; opacity: 0.6; filter: brightness(0.7) contrast(1.2); z-index: 1;">
                     
-                    <!-- Marcadores de países - Posiciones ajustadas al nuevo mapa -->
-                    <div class="country-marker" data-country="panama" style="left: 30%; top: 46%;">
+                    <!-- Marcadores de países - Posiciones ajustadas al mapa -->
+                    <div class="country-marker" data-country="panama" style="left: 27%; top: 48%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Panamá</div>
                     </div>
-                    <div class="country-marker" data-country="mexico" style="left: 25%; top: 35%;">
+                    <div class="country-marker" data-country="mexico" style="left: 20%; top: 40%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">México</div>
                     </div>
-                    <div class="country-marker" data-country="usa" style="left: 22%; top: 25%;">
+                    <div class="country-marker" data-country="usa" style="left: 18%; top: 30%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Estados Unidos</div>
                     </div>
-                    <div class="country-marker" data-country="colombia" style="left: 32%; top: 50%;">
+                    <div class="country-marker" data-country="colombia" style="left: 28%; top: 50%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Colombia</div>
                     </div>
-                    <div class="country-marker" data-country="brasil" style="left: 38%; top: 60%;">
+                    <div class="country-marker" data-country="brasil" style="left: 35%; top: 65%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Brasil</div>
                     </div>
-                    <div class="country-marker" data-country="argentina" style="left: 35%; top: 75%;">
+                    <div class="country-marker" data-country="argentina" style="left: 30%; top: 80%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Argentina</div>
                     </div>
-                    <div class="country-marker" data-country="cuba" style="left: 28%; top: 40%;">
+                    <div class="country-marker" data-country="cuba" style="left: 25%; top: 42%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Cuba</div>
                     </div>
-                    <div class="country-marker" data-country="espana" style="left: 48%; top: 30%;">
+                    <div class="country-marker" data-country="espana" style="left: 47%; top: 35%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">España</div>
                     </div>
-                    <div class="country-marker" data-country="francia" style="left: 49%; top: 26%;">
+                    <div class="country-marker" data-country="francia" style="left: 48%; top: 32%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Francia</div>
                     </div>
-                    <div class="country-marker" data-country="italia" style="left: 52%; top: 30%;">
+                    <div class="country-marker" data-country="italia" style="left: 50%; top: 36%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Italia</div>
                     </div>
-                    <div class="country-marker" data-country="reino_unido" style="left: 47%; top: 22%;">
+                    <div class="country-marker" data-country="reino_unido" style="left: 46%; top: 28%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Reino Unido</div>
                     </div>
-                    <div class="country-marker" data-country="japon" style="left: 90%; top: 30%;">
+                    <div class="country-marker" data-country="japon" style="left: 85%; top: 38%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Japón</div>
                     </div>
-                    <div class="country-marker" data-country="corea_sur" style="left: 87%; top: 28%;">
+                    <div class="country-marker" data-country="corea_sur" style="left: 83%; top: 40%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Corea del Sur</div>
                     </div>
-                    <div class="country-marker" data-country="nigeria" style="left: 52%; top: 45%;">
+                    <div class="country-marker" data-country="nigeria" style="left: 52%; top: 50%;">
                         <span class="marker-dot"></span>
                         <div class="country-tooltip">Nigeria</div>
                     </div>
