--- a/index.html
+++ b/index.html
@@ -10,6 +10,45 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Fondo Musical Animado -->
+    <div class="musical-background">
+        <div class="musical-waves">
+            <div class="wave wave-1"></div>
+            <div class="wave wave-2"></div>
+            <div class="wave wave-3"></div>
+            <div class="wave wave-4"></div>
+        </div>
+        <div class="musical-notes">
+            <div class="note note-1">♪</div>
+            <div class="note note-2">♫</div>
+            <div class="note note-3">♬</div>
+            <div class="note note-4">♩</div>
+            <div class="note note-5">♭</div>
+            <div class="note note-6">♯</div>
+            <div class="note note-7">♪</div>
+            <div class="note note-8">♫</div>
+        </div>
+        <div class="audio-visualizer">
+            <div class="bar bar-1"></div>
+            <div class="bar bar-2"></div>
+            <div class="bar bar-3"></div>
+            <div class="bar bar-4"></div>
+            <div class="bar bar-5"></div>
+            <div class="bar bar-6"></div>
+            <div class="bar bar-7"></div>
+            <div class="bar bar-8"></div>
+            <div class="bar bar-9"></div>
+            <div class="bar bar-10"></div>
+        </div>
+        <div class="musical-pattern">
+            <div class="pattern-line line-1"></div>
+            <div class="pattern-line line-2"></div>
+            <div class="pattern-line line-3"></div>
+            <div class="pattern-line line-4"></div>
+            <div class="pattern-line line-5"></div>
+        </div>
+    </div>
+    
     <!-- Barra de Navegación -->
     <header class="header" id="header">
         <nav class="nav">
