--- a/educacion.html
+++ b/educacion.html
@@ -89,26 +89,50 @@
         .educacion-card {
             background-color: var(--color-secundario);
             border-radius: 12px;
-            padding: var(--spacing-md);
+            padding: 0;
             border: 1px solid var(--color-borde);
             transition: all var(--transition-normal);
             cursor: pointer;
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
         }
 
         .educacion-card:hover {
             border-color: var(--color-acento);
-            transform: translateX(5px);
+            transform: translateY(-5px);
+            box-shadow: 0 8px 20px rgba(212, 175, 55, 0.2);
+        }
+
+        .educacion-card-image {
+            width: 100%;
+            height: 200px;
+            overflow: hidden;
+            position: relative;
+        }
+
+        .educacion-card-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform var(--transition-slow);
+        }
+
+        .educacion-card:hover .educacion-card-image img {
+            transform: scale(1.15);
         }
 
         .educacion-card h4 {
             color: var(--color-acento);
             font-size: 1.3rem;
             margin-bottom: var(--spacing-sm);
+            padding: var(--spacing-md) var(--spacing-md) 0;
         }
 
         .educacion-card p {
             color: var(--color-texto-muted);
             line-height: 1.8;
+            padding: 0 var(--spacing-md) var(--spacing-md);
         }
 
         .timeline {
@@ -155,15 +179,72 @@
             color: var(--color-texto-muted);
             margin-top: var(--spacing-xs);
         }
+
+        /* Estilos para modo claro */
+        body.light-mode .educacion-card {
+            background-color: var(--color-primario-claro);
+            border-color: #e5e7eb;
+        }
+
+        body.light-mode .educacion-card:hover {
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        }
+
+        body.light-mode .educacion-card h4 {
+            color: var(--color-acento);
+        }
+
+        body.light-mode .educacion-card p {
+            color: var(--color-texto-muted-claro);
+        }
     </style>
 </head>
 <body>
+    <!-- Fondo Musical Animado -->
+    <div class="musical-background">
+        <div class="musical-waves">
+            <div class="wave wave-1"></div>
+            <div class="wave wave-2"></div>
+            <div class="wave wave-3"></div>
+            <div class="wave wave-4"></div>
+        </div>
+        <div class="musical-notes">
+            <div class="note note-1">♪</div>
+            <div class="note note-2">♫</div>
+            <div class="note note-3">♬</div>
+            <div class="note note-4">♩</div>
+            <div class="note note-5">♭</div>
+            <div class="note note-6">♯</div>
+            <div class="note note-7">♪</div>
+            <div class="note note-8">♫</div>
+        </div>
+        <div class="audio-visualizer">
+            <div class="bar bar-1"></div>
+            <div class="bar bar-2"></div>
+            <div class="bar bar-3"></div>
+            <div class="bar bar-4"></div>
+            <div class="bar bar-5"></div>
+            <div class="bar bar-6"></div>
+            <div class="bar bar-7"></div>
+            <div class="bar bar-8"></div>
+            <div class="bar bar-9"></div>
+            <div class="bar bar-10"></div>
+        </div>
+        <div class="musical-pattern">
+            <div class="pattern-line line-1"></div>
+            <div class="pattern-line line-2"></div>
+            <div class="pattern-line line-3"></div>
+            <div class="pattern-line line-4"></div>
+            <div class="pattern-line line-5"></div>
+        </div>
+    </div>
+    
     <!-- Barra de Navegación -->
     <header class="header" id="header">
         <nav class="nav">
             <div class="nav-logo">
-                <a href="index.html" style="text-decoration: none; color: inherit;">
-                    <span class="logo-text">Meloopedia</span>
+                <a href="index.html" style="text-decoration: none; color: inherit; display: flex; align-items: center;">
+                    <img src="logo.svg" alt="Meloopedia" class="logo-image">
                 </a>
             </div>
             <ul class="nav-menu" id="navMenu">
@@ -173,18 +254,23 @@
                 <li><a href="mapa.html" class="nav-link">Mapa</a></li>
                 <li><a href="educacion.html" class="nav-link">Educación</a></li>
                 <li><a href="emergentes.html" class="nav-link">Emergentes</a></li>
+                <li><a href="leyendas.html" class="nav-link">Leyendas</a></li>
+                <li><a href="biblioteca.html" class="nav-link">Biblioteca</a></li>
                 <li><a href="buscar.html" class="nav-link">Buscar</a></li>
             </ul>
             <div class="nav-actions">
+                <a href="login.html" class="btn-login" id="btnLogin">
+                    <span class="btn-login-icon">🔐</span>
+                    <span class="btn-login-text">Iniciar Sesión</span>
+                </a>
+                <div class="user-profile" id="userProfile" style="display: none;">
+                    <span class="profile-icon">👤</span>
+                    <span class="profile-name" id="profileName"></span>
+                    <button class="btn-logout" id="btnLogout" title="Cerrar sesión">✕</button>
+                </div>
                 <button class="theme-toggle" id="themeToggle" aria-label="Cambiar tema">
                     <span class="theme-icon">🌙</span>
                 </button>
-                <div class="user-profile" id="userProfile">
-                    <span class="profile-icon">👤</span>
-                    <span class="xp-bar">
-                        <span class="xp-fill" id="xpFill"></span>
-                    </span>
-                </div>
                 <button class="menu-toggle" id="menuToggle" aria-label="Menú">
                     <span></span>
                     <span></span>
@@ -215,14 +301,23 @@
                 </div>
                 <div class="educacion-content">
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1511192336575-5a79af67a629?w=800&h=600&fit=crop" alt="Jazz" onerror="this.style.display='none'">
+                        </div>
                         <h4>Orígenes del Jazz</h4>
                         <p>El jazz nació a finales del siglo XIX en Nueva Orleans, fusionando música africana, blues y ragtime. Se caracteriza por la improvisación y el swing.</p>
                     </div>
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1493225457124-a3eb161ffa5f?w=800&h=600&fit=crop" alt="Rock" onerror="this.style.display='none'">
+                        </div>
                         <h4>Evolución del Rock</h4>
                         <p>El rock and roll surgió en los años 50 como fusión de rhythm and blues, country y gospel. Revolucionó la música popular y dio origen a múltiples subgéneros.</p>
                     </div>
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1470229722913-7c0e2dbbafd3?w=800&h=600&fit=crop" alt="Pop" onerror="this.style.display='none'">
+                        </div>
                         <h4>El Pop Moderno</h4>
                         <p>La música pop se desarrolló en los años 60, enfocándose en melodías pegadizas y producción comercial. Hoy domina las listas de éxitos mundiales.</p>
                     </div>
@@ -237,14 +332,23 @@
                 </div>
                 <div class="educacion-content">
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1511735111819-9a3f7709049c?w=800&h=600&fit=crop" alt="Instrumentos de Cuerda" onerror="this.style.display='none'">
+                        </div>
                         <h4>Instrumentos de Cuerda</h4>
                         <p>Desde la guitarra española hasta el sitar indio, los instrumentos de cuerda han sido fundamentales en todas las culturas musicales del mundo.</p>
                     </div>
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1466150032412-92607bf3b5b4?w=800&h=600&fit=crop" alt="Instrumentos de Viento" onerror="this.style.display='none'">
+                        </div>
                         <h4>Instrumentos de Viento</h4>
                         <p>La flauta, el saxofón, la trompeta y otros instrumentos de viento han evolucionado a lo largo de siglos, cada uno con su historia única.</p>
                     </div>
                     <div class="educacion-card">
+                        <div class="educacion-card-image">
+                            <img src="https://images.unsplash.com/photo-1511671782779-c97d3d27a1d4?w=800&h=600&fit=crop" alt="Percusión" onerror="this.style.display='none'">
+                        </div>
                         <h4>Percusión Global</h4>
                         <p>Los tambores y percusiones varían enormemente entre culturas, desde los djembes africanos hasta las tablas indias.</p>
                     </div>
@@ -288,7 +392,9 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Meloopedia</h3>
+                    <div class="footer-logo">
+                        <img src="logo.svg" alt="Meloopedia" class="logo-image-footer">
+                    </div>
                     <p>La enciclopedia musical más completa del mundo. Descubre artistas, géneros y culturas musicales.</p>
                 </div>
                 <div class="footer-section">
@@ -326,5 +432,6 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="auth.js"></script>
 </body>
 </html>
